Mon Jan  5 22:48:39 2009  Arnold D. Robbins  <arnold@skeeve.com>

	* io.c (redirect): A getline from a directory is no longer
	fatal; instead it returns -1. Thanks to Paolo <oopla@users.sf.net>
	for the report.

Mon Dec 29 22:04:57 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* builtin.c (format_tree): Case for 's', improve logic for setting
	the number of characters to copy, also at pr_tail. Based on
	bug report by Hermann Peifer <peifer@gmx.net>.

Thu Dec 11 21:23:50 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* builtin.c (do_length): If the wide string has zero length
	but the bytes are more than zero, use the number of bytes.
	(do_index): Similar also: fall back to byte count if the
	bytes don't make a wide-character string.
	Bug reported by "Carlos G." <charlie.brown.uy@gmail.com>

	(do_substr): If defaulting to length of rest of the string,
	do it based on the wide char string if it's valid.

Fri Dec  5 11:12:11 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* io.c (free_rp): New function.
	(redirect): Improved logic for yesterday's change, including
	use of free_rp.
	(close_redir): Use free_rp.

Thu Dec  4 22:35:05 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* io.c (redirect): Only put the new struct redirect into
	the list if the file or pipe could actually be opened. Fixes
	a bug with the wrong return value of close, noticed by
	Seb <sbb@tuxfamily.org>.
	* dfa.c (parse_bracket_exp_mb): Don't zero out work_mbc->chars
	after we malloc'ed it. Fixes a leak found by valgrind when
	using UTF-8.  (Hmmm. This got fixed in January 2007; It seems
	to have crept back into the code in the August 2007 merge with
	GNU grep. Sigh.)

Mon Oct 20 11:47:59 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* configure.ac: Add -g3 and -gdwarf-2 to CFLAGS if compiling with
	GCC and doing development. Should have done this ages ago.

Sun Aug 31 22:03:55 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* eval.c (set_BINMODE): Tighten up the code to even more so